...
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_profil" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_white_black_stroke_button_background"
                    android:fontFamily="@font/quicksand_semibold"
                    android:hint="@string/creer_profil_adresse_email"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:scrollHorizontally="false"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_date_de_debut" />

                <RadioGroup
                    android:id="@+id/radio_group_statut"
                    android:layout_width="320dp"
                    android:layout_height="69dp"
                    app:layout_constraintStart_toStartOf="@+id/text_informations_personnelles"
                    app:layout_constraintTop_toBottomOf="@+id/text_statut">

                    <RadioButton
...
                        android:fontFamily="@font/quicksand_semibold"

                        android:text="@string/creer_profil_professionnel_de_sante"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radio_button_utilisateur"
                        android:layout_width="123dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="11dp"
                        android:fontFamily="@font/quicksand_semibold"
                        android:text="@string/creer_profil_utilisateur"
                        android:textSize="14sp"
...
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="start"
                    android:text="@string/creer_profil_informations_personnelles"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/input_nom"
                    app:layout_constraintTop_toBottomOf="@+id/radio_group_statut" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_creer_profil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="50dp"
                    android:alpha="0.3"
...
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_rgpd" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_white_black_stroke_button_background"
                    android:fontFamily="@font/quicksand_semibold"
                    android:hint="Mot de passe (6 chiffres)"
...
                    android:text="@string/creer_profil_rgpd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/input_password"
                    app:layout_constraintTop_toBottomOf="@+id/input_password" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_prenom"
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_white_black_stroke_button_background"
                    android:fontFamily="@font/quicksand_semibold"
                    android:hint="@string/creer_profil_prenom"
...
