...
    <string name="app_name" translatable="false">Medicazelda</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="param_buttun">Bouton Paramètre</string>
    <string name="bienvenue_sur_medicalink">Bienvenue sur Medicazelda !</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="me_connecter">Me connecter</string>
    <string name="creer_mon_profil">Créer mon profil</string>
    <string name="changer_utilisateur">Changer d\'utilisateur</string>
    <string name="selectionner_un_profil">Sélectionner un profil</string>
    <string name="ajouter_un_profil">Ajouter un profil</string>
    <string name="medicalink_title" translatable="false">Medicazelda</string>
    <string name="creer_profil_votre_profil">Votre profil</string>
    <string name="creer_profil_adresse_email">Adresse Email</string>
...
    <string name="creer_profil_rgpd">J\'accepte les conditions en matière de protection des données relatives au RGPD</string>
    <string name="creer_profil_prenom">Prénom</string>
    <string name="creer_profil_date_de_naissance">Date de naissance</string>
    <string name="dialog_dosage">Dosage</string>
    <string name="dialog_dosage_quantite">Quantité</string>
    <string name="dialog_annuler">Annuler</string>
    <string name="dialog_ok" translatable="false">OK</string>
    <string name="dialog_intervalle_regulier">Intervalle régulier</string>
    <string name="dialog_me_le_rappeler_avant">Me le rappeler avant</string>
    <string name="dialog_jours">jours</string>
    <string name="dialog_utiliser_votre_mot_de_passe">Utiliser votre mot de passe</string>
    <string name="dialog_mot_de_passe_incorrect">Mot de passe incorrect</string>
    <string name="dialog_mot_de_passe">Mot de passe</string>
...
    <string name="Messagerie">Messagerie</string>
    <string name="textMessage">textMessage</string>
    <string name="titreMessage">titreMessage</string>
    <string name="parametre">Paramètres</string>
    <string name="aucun_traitement">Aucun traitement</string>
    <string name="aucun_medicament_prevu">Aucun médicament prévu !</string>
    <string name="Utilisateur">Utilisateur</string>
    <string name="professionnel">Professionnel</string>
    <string name="creer_profil_utilisateur">Utilisateur</string>
    <string name="rapport_journalier">Rapport journalier :</string>
    <string name="x_x" translatable="false">X/X</string>
    <string name="chargement">Chargement</string>
    <string name="dark_mode">Mode sombre</string>
...
