...
            app:layout_constraintBottom_toBottomOf="@+id/image_connexion"
            app:layout_constraintStart_toStartOf="@+id/image_connexion" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_connexion"
        android:layout_width="250dp"
        android:layout_height="69dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_green_home_button_background"
        android:fontFamily="@font/quicksand_semibold"
        android:text="@string/creer_mon_profil"
...
